--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+# DocCreator
+
+ DocCrator is an open source, cross-platform software allowing to generate synthetic document images and the accompanying groundtruth. Various degradation models can be applied on original document images to create virtually unlimited amounts of different images.
+
+ Citation: if you use DocCreator in Reaserch work for publication, please cite:
+ Journet, N.; Visani, M.; Mansencal, B.; Van-Cuong, K.; Billy, A. DocCreator: A New Software for Creating Synthetic Ground-Truthed Document Images. J. Imaging 2017, 3, 62. 
+ http://www.mdpi.com/2313-433X/3/4/62
+
 
 This program should compile under linux (with gcc & clang), Mac OS (with clang) and Microsoft Windows 10 (with Visual Studio 2017).
 It has been tested on Fedora (19->27), Ubuntu (14.04->17.04), Mac OS (10.9->10.11), Windows 10.
